<resources>
    <string name="app_name">Practica8_Digimind</string>
    <string name="title_home">My Board</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="firstQuestion">What do you want to remember to do?</string>
    <string name="secondQuestion">When do you want it?</string>
    <string name="thirdQuestion">At what time?</string>
    <string name="setTime">Set Time</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hint_take_my_pill">Take my pill</string>
    <string name="hint_time">17:00</string>
    <string name="defaultRecord">Practice</string>
</resources>